# AgentBastion

./: .dockerignore  .env.example  .env.production.example  .gitignore  Cargo.toml  LICENSE  LICENSING.md  LICENSING.zh-CN.md  Makefile  README.md  README.zh-CN.md
.github/workflows/: ci.yml
crates/auth/: Cargo.toml
crates/common/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: budget_alert.rs  cache.rs  channel.rs  content_filter.rs  cost_tracker.rs  failover.rs  lib.rs  metadata.rs  pii_redactor.rs  prefix_balancer.rs  proxy.rs  quota.rs  rate_limiter.rs  router.rs  sse_parser.rs  streaming.rs  token_counter.rs
crates/gateway/src/providers/: anthropic.rs  custom.rs  google.rs  mod.rs  openai.rs  traits.rs
crates/gateway/src/transform/: mod.rs
crates/mcp-gateway/: Cargo.toml
crates/server/: Cargo.toml  build.rs
deploy/: docker-compose.dev.yml  docker-compose.yml  generate-secrets.sh
deploy/docker/: Dockerfile.server  Dockerfile.web  nginx.conf
deploy/quickwit/: audit_logs_index.yaml
docs/: secret-rotation.md
docs/en/: api-reference.md  architecture.md  configuration.md  deployment-guide.md  security.md
docs/zh-CN/: api-reference.md  (+4 more)
migrations/: 001_init_users.sql  002_init_teams.sql  003_init_rbac.sql  004_init_api_keys.sql  005_init_providers.sql  006_init_mcp_servers.sql  007_init_usage_audit.sql  010_system_settings.sql  011_indexes_and_soft_delete.sql  012_api_key_lifecycle.sql  015_role_resource_constraints.sql  016_iam_policies.sql
web/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+105 files in other folders)
